--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,35 @@
 /* write your override styles here */
+#wall .tag-1 {
+  background: url(../images/tag-1.png) no-repeat;
+  z-index: 7;
+  display: none;
+}
+
+#wall #tag-2.slick-two {
+  display: none;
+}
+
+#wall #tag-3.slick-wicked{
+  display: none;
+}
+
+#wall .parent #tag-4.slick-four {
+  background: url(../images/tag-4.png) no-repeat;
+  z-index: 4;
+  display: none;
+}
+
+#wall .parent #tag-5.slick-five {
+  display: none;
+}
+
+#wall .parent #tag-6.slick-six {
+  z-index: 2;
+  display: none;
+}
+
+#wall .parent #tag-7.slick-seven {
+  background: url(../images/tag-7.png) no-repeat;
+  z-index: 1;
+  display: none;
+}
