--- a/css/paint.css
+++ b/css/paint.css
@@ -21,6 +21,7 @@ body {
   top: 0;
   left: 0;
   width: 980px;
+  display: none;
   height: 622px;
 }
 
@@ -48,6 +49,7 @@ div#wall #tag-3.slick {
   display: block;
 }
 
+/* 2 2 1 */
 div#wall .parent #tag-5.slick {
   background: url(../images/tag-5.png) no-repeat;
   z-index: 3;
